welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:3: error: not found: value termp
    if (isSummer==true && termp<101){
                          ^